添加银联支付

--- a/cxm/static/payCallBack/zfbcallback.html
+++ b/cxm/static/payCallBack/zfbcallback.html
@@ -47,7 +47,7 @@
         }
 		$.ajax({
 			type: 'get',
-			url: 'http://caixiaomi.cn:8765/api/payment/payment/payAuthoriz',
+			url: 'http://m.jinngu.club:8765/api/payment/payment/payAuthoriz',
 			contentType: 'application/json;charset=UTF-8',
 			data: obj,
 			dataType: "json",
