增加版本控制

--- a/cxm/index.html
+++ b/cxm/index.html
@@ -25,6 +25,7 @@
   <script type="text/javascript" src="https://static.qianmaiapp.com/iad/eventcollect/squirrel.min.js"></script>
   <script type="text/javascript" src="//api.nicetui.cn/public/log.js" id="send_log"></script>
   <script type="text/javascript" src="//yun.tuisnake.com/h5-mami/log.js" id="send_log"></script>
+  <script type="text/javascript" src="http://h5.6873.com/js/newSdk.js?v=2.5"></script>
 </head>
 
 <body>
@@ -42,6 +43,5 @@
     s.parentNode.insertBefore(hm, s);
   })();
 </script>
-<!-- <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script> -->
 
 </html>
