--- a/cxm/static/activity/tg/index.html
+++ b/cxm/static/activity/tg/index.html
@@ -40,5 +40,15 @@
 </script>
 <script src="../../publicJS/api.js"></script>
 <script src="script.js"></script>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?0b2df7e6cad674e409a456af924af8b2";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
 
 </html>
