--- a/cxm/index.html
+++ b/cxm/index.html
@@ -25,7 +25,7 @@
   <script type="text/javascript" src="https://static.qianmaiapp.com/iad/eventcollect/squirrel.min.js"></script>
   <script type="text/javascript" src="//api.nicetui.cn/public/log.js" id="send_log"></script>
   <script type="text/javascript" src="//yun.tuisnake.com/h5-mami/log.js" id="send_log"></script>
-  <script type="text/javascript" src="http://h5.6873.com/js/newSdk.js?v=2.5"></script>
+  <script type="text/javascript" src="https://h5.6873.com/js/newSdk.js?v=2.5"></script>
 </head>
 
 <body>
