--- a/cxm/static/activity/tg/index.html
+++ b/cxm/static/activity/tg/index.html
@@ -19,12 +19,12 @@
 			<div class="bt-img">
 				<div class="code">
 					<input onBlur="inputBlur()" class="phoneVal" maxlength="11" type="tel" value="" placeholder="请输入手机号" />
-					<div>
+					<div class="code-box">
 						<input onBlur="inputBlur()" class="codeVal" type="tel" value="" placeholder="请输入验证码" />
 						<button class="codebtn" onClick='register()'>获取验证码</button>
 					</div>
 				</div>
-				<div class="mk" onClick='lqbtn()'></div>
+				<div class="mk" id="mk" onClick='lqbtn()'></div>
 				<div class="hdgz" onClick='activity_smClick()'>
 					<span>活动规则</span>
 				</div>
